--- a/templates/parameters_hmc.toml
+++ b/templates/parameters_hmc.toml
@@ -29,7 +29,7 @@ logdir = "./logs/L4x4x4x4_beta5.7"
 logfile = "test_timing_0606.txt"
 measurement_basedir = "./measurements/L4x4x4x4_beta5.7"
 measurement_dir = "test_timing_0606"
-randomseeds = 1206
+randomseed = 1206
 verboselevel = 1
 bias_basedir = "./metapotentials/L4x4x4x4_beta5.7"
 bias_dir = "test_timings_0606"
