--- a/templates/parameters_heatbath.toml
+++ b/templates/parameters_heatbath.toml
@@ -6,9 +6,9 @@ Ntherm = 10
 Nsteps = 100
 initial = "cold"
 update_method = "heatbath"
-MAXIT = 10
-numHB = 4
-numOR = 1
+hb_MAXIT = 10
+hb_numHB = 4
+hb_numOR = 1
 
 ["System Settings"]               
 logdir = "./logs/L4x4x4x4_beta5.7"
