--- a/templates/parameters_metro.toml
+++ b/templates/parameters_metro.toml
@@ -6,8 +6,9 @@ Ntherm = 10
 Nsteps = 100
 initial = "cold"
 update_method = "Metropolis"
-multi_hit = 5
+metro_multi_hit = 5
 metro_target_acc = 0.5
+"metro_ϵ" = 0.1
 
 ["System Settings"]               
 logdir = "./logs/L4x4x4x4_beta5.7"
