--- a/templates/parameters_hmc.toml
+++ b/templates/parameters_hmc.toml
@@ -1,7 +1,7 @@
 ["Physical Settings"]
 L = [4, 4, 4, 4]
 "β" = 5.7
-kind_of_gaction = "wilson"
+kind_of_gaction = "dbw2"
 Ntherm = 10
 Nsteps = 10
 initial = "hot"
