--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 alloc-profile.pb.gz
-logs/
-measurements/
-metapotentials/
-templates/
-test/test.jl
-test/testsmearing.jl
+/logs/
+/measurements/
+/metapotentials/
+/templates/
+/test/test.jl
+/test/testsmearing.jl
 .vscode/settings.json
 run.jl
-dirac/
-src/system/mainrun_mpi.jl
+/src/dirac/
+/src/system/mainrun_mpi.jl
+LocalPreferences.toml
