--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,10 @@
+authors = ["GianlucaFuwa <gianlucafuwa@gmail.com> and contributors"]
 name = "MetaQCD"
 uuid = "31f46e0f-f1ce-4e94-be20-2bb7f09e036f"
-authors = ["GianlucaFuwa <gianlucafuwa@gmail.com> and contributors"]
 version = "1.0.0-DEV"
+
+[compat]
+julia = "1.9"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -9,17 +12,17 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
-[compat]
-julia = "1.9"
-
 [extras]
+MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
