--- a/templates/parameters_hmc.toml
+++ b/templates/parameters_hmc.toml
@@ -1,15 +1,15 @@
 ["Physical Settings"]
 L = [4, 4, 4, 4]
-"β" = 5.7
+"β" = 6.0
 kind_of_gaction = "wilson"
-Ntherm = 10
-Nsteps = 10
+Ntherm = 1
+Nsteps = 1
 initial = "cold"
 update_method = "HMC"
 meta_enabled = true
-# tempering_enabled = true
-# numinstances = 2
-# swap_every = 5
+tempering_enabled = true
+numinstances = 2
+swap_every = 5
 
 ["MetaD related"]
 kind_of_cv = "clover"
@@ -21,7 +21,7 @@ bin_width = 1e-2
 meta_weight = 1e-2
 penalty_weight = 1000.0
 wt_factor = "Inf"
-is_static = false
+is_static = true
 kinds_of_weights = ["tiwari", "balanced_exp", "branduardi"]
 
 ["HMC related"]
@@ -30,43 +30,43 @@ hmc_steps = 10
 hmc_integrator = "OMF4"
 
 ["System Settings"]               
-logdir = "./logs/L4x4x4x4_beta5.7"
+logdir = "./logs/L4x4x4x4_beta6.0"
 logfile = "test_hmc.txt"
-measurement_basedir = "./measurements/L4x4x4x4_beta5.7"
+measurement_basedir = "./measurements/L4x4x4x4_beta6.0"
 measurement_dir = "test_hmc"
 randomseed = 1206
 verboselevel = 1
-bias_basedir = "./metapotentials/L4x4x4x4_beta5.7"
+bias_basedir = "./metapotentials/L4x4x4x4_beta6.0"
 bias_dir = "test_hmc"
-usebiases = [
-    "nothing",
-]
+saveU_dir = "./configs/L4x4x4x4_beta6.0"
+saveU_format = "jld"
+saveU_every = 1
 
 ["Measurement set".measurement_methods.Polyakov_loop]
-measure_every = 5
+measure_every = 10
 methodname = "polyakov_loop"
 
 ["Measurement set".measurement_methods.Topological_charge]
-measure_every = 5
-kinds_of_topological_charge = ["plaquette", "clover", "improved"]
+measure_every = 10
+kinds_of_topological_charge = ["clover"]
 methodname = "topological_charge"
 
-["Measurement set".measurement_methods.Energy_density]
-measure_every = 5
-kinds_of_energy_density = ["plaquette", "clover", "improved"]
-methodname = "energy_density"
-
 ["Measurement set".measurement_methods.Plaquette]
-measure_every = 5
+measure_every = 10
 methodname = "plaquette"
 
 [gradientflow_measurements]
 flow_integrator = "euler"
-flow_num = 10
-flow_steps = 10
-"flow_ϵ" = 0.1
-flow_measure_every = 2
+flow_num = 3
+flow_steps = 1
+"flow_ϵ" = 0.12
+flow_measure_every = 3
 
-    [gradientflow_measurements.measurements_with_flow.Energy_density]
+    [gradientflow_measurements.measurements_with_flow.Topological_charge]
     measure_every = 10
-    methodname = "energy_density"
+    methodname = "topological_charge"
+    kinds_of_topological_charge = ["clover"]
+
+    [gradientflow_measurements.measurements_with_flow.Plaquette]
+    measure_every = 10
+    methodname = "plaquette"
