--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["GianlucaFuwa <gianlucafuwa@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
@@ -22,6 +23,14 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
+DelimitedFiles = "1.9.1"
+JLD2 = "0.4.31"
+LoopVectorization = "0.12.159"
+MPI = "0.20.11"
+Polyester = "0.7.3"
+Requires = "1.3.0"
+StaticArrays = "1.5.25"
+TimerOutputs = "0.5.23"
 julia = "1.9"
 
 [extras]
