--- a/templates/parameters_metro.toml
+++ b/templates/parameters_metro.toml
@@ -1,6 +1,6 @@
 ["Physical Settings"]
-L = [12, 12, 12, 12]
-"β" = 6.0
+L = [4, 4, 4, 4]
+"β" = 5.7
 kind_of_gaction = "wilson"
 Ntherm = 20
 Nsteps = 100
@@ -11,11 +11,12 @@ metro_target_acc = 0.5
 "metro_ϵ" = 0.1
 
 ["System Settings"]               
-logdir = "./logs/test_metro"
+logdir = "./logs/L4x4x4x4_beta5.7"
 logfile = "test_metro.txt"
-measurement_basedir = "./measurements/test_metro"
+measurement_basedir = "./measurements/L4x4x4x4_beta5.7"
 measurement_dir = "test_metro"
-randomseed = 1206
+randomseed = 0
+overwrite = true
 
 ["Measurement set".measurement_methods.Polyakov_loop]
 measure_every = 5
@@ -33,8 +34,8 @@ methodname = "plaquette"
 [gradientflow_measurements]
 flow_integrator = "euler"
 flow_num = 4
-flow_steps = 10
-"flow_ϵ" = 0.1
+flow_steps = 1
+flow_tf = 0.1
 flow_measure_every = 1
 
     [gradientflow_measurements.measurements_with_flow]
