--- a/Project.toml
+++ b/Project.toml
@@ -23,14 +23,15 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
-DelimitedFiles = "1.9.1"
-JLD2 = "0.4.31"
-LoopVectorization = "0.12.159"
-MPI = "0.20.11"
-Polyester = "0.7.3"
-Requires = "1.3.0"
-StaticArrays = "1.5.25"
-TimerOutputs = "0.5.23"
+Aqua = "0.6"
+DelimitedFiles = "1.9"
+JLD2 = "0.4"
+LoopVectorization = "0.12"
+MPI = "0.20"
+Polyester = "0.7"
+Requires = "1.3"
+StaticArrays = "1.5"
+TimerOutputs = "0.5"
 julia = "1.9"
 
 [extras]
