--- a/templates/parameters_heatbath.toml
+++ b/templates/parameters_heatbath.toml
@@ -2,8 +2,8 @@
 L = [8, 8, 8, 8]
 "β" = 5.70
 kind_of_gaction = "wilson"
-Ntherm = 100
-Nsteps = 100
+Ntherm = 10
+Nsteps = 10
 initial = "cold"
 update_method = "heatbath"
 hb_MAXIT = 10
@@ -14,11 +14,11 @@ parity_update = true
 
 ["System Settings"]               
 logdir = "./logs/L8x8x8x8_beta5.7"
-logfile = "test_heatbath.txt"
+logfile = "test_wilson.txt"
 measurement_basedir = "./measurements/L8x8x8x8_beta5.7"
-measurement_dir = "test_heatbath"
+measurement_dir = "test_wilson"
 randomseed = 0 # 0 => randomly chosen seed
-verboselevel = 1
+verboselevel = 2
 overwrite = true
 
 ["Measurement set".measurement_methods.Polyakov_loop]
