--- a/templates/parameters_hmc.toml
+++ b/templates/parameters_hmc.toml
@@ -1,6 +1,6 @@
 ["Physical Settings"]
 L = [12, 12, 12, 12]
-beta = 6.3188
+beta = 6.0
 kind_of_gaction = "wilson"
 numtherm = 20
 numsteps = 100
@@ -9,27 +9,27 @@ update_method = "hmc"
 parity_update = false
 
 ["HMC Settings"]
-hmc_deltatau = 0.02
-hmc_steps = 50
+hmc_deltatau = 0.2
+hmc_steps = 5
 hmc_integrator = "OMF4"
 
 ["System Settings"]               
-logdir = "./logs/hmc_stability/wilson_dtau0.02"
+logdir = "./logs/L12x12x12x12_wilson_beta6.0/test_hmc"
 logfile = "logs.txt"
-measurement_basedir = "./measurements/hmc_stability/wilson_dtau0.02"
+measurement_basedir = "./measurements/L12x12x12x12_wilson_beta6.0/test_hmc"
 measurement_dir = "raw_data"
-randomseed = 1206 # 0 => randomly chosen seed
-verboselevel = 2
+randomseed = 123
+verboselevel = 1
 overwrite = true
 
-# ["Measurement set".measurement_methods.Polyakov_loop]
-# measure_every = 100
-# methodname = "polyakov_loop"
+["Measurement set".measurement_methods.Polyakov_loop]
+measure_every = 10
+methodname = "polyakov_loop"
 
-# ["Measurement set".measurement_methods.Topological_charge]
-# measure_every = 100
-# kinds_of_topological_charge = ["clover"]
-# methodname = "topological_charge"
+["Measurement set".measurement_methods.Topological_charge]
+measure_every = 10
+kinds_of_topological_charge = ["clover"]
+methodname = "topological_charge"
 
 ["Measurement set".measurement_methods.Plaquette]
 measure_every = 10
@@ -37,11 +37,14 @@ methodname = "plaquette"
 
 [gradientflow_measurements]
 flow_integrator = "euler"
-flow_num = 9
+flow_num = 7
 flow_steps = 1
 flow_tf = 0.12 # total flow time is flow_num * flow_tf
-flow_measure_every = 9
+flow_measure_every = 7
 
-    [gradientflow_measurements.measurements_with_flow]
+    [gradientflow_measurements.measurements_with_flow.Topological_charge]
+    measure_every = 10
+    kinds_of_topological_charge = ["clover"]
+    methodname = "topological_charge"
 
 
