--- a/templates/parameters_ptmetad.toml
+++ b/templates/parameters_ptmetad.toml
@@ -3,7 +3,7 @@ L = [16, 16, 16, 16]
 beta = 1.25
 kind_of_gaction = "dbw2"
 numtherm = 1
-numsteps = 2
+numsteps = 1
 initial = "cold"
 update_method = "heatbath"
 numheatbath = 1
@@ -12,7 +12,7 @@ eo = true
 
 ["Bias Settings"]
 # general bias parameters
-kind_of_bias = "metad"
+kind_of_bias = "parametric"
 kind_of_cv = "clover"
 numsmears_for_cv = 4
 rhostout_for_cv = 0.12
@@ -28,6 +28,10 @@ penalty_weight = 1000
 usebiases = [
     "./metapotentials/L16x16x16x16_dbw2_beta1.25/ssa.txt",
 ]
+# parameters
+bias_Q = 0.0
+bias_A = 7
+bias_Z = 1.18
 # tempering specific parameters
 tempering_enabled = true
 numinstances = 2
@@ -39,21 +43,21 @@ measure_on_all = true
 hmc_deltatau = 0.2
 hmc_steps = 5
 hmc_integrator = "OMF4"
-hmc_friction = 0.39269908169872414
+# hmc_friction = 0.39269908169872414
 
 ["System Settings"]               
-logdir = "./logs/L16x16x16x16_dbw2_beta1.25"
+logdir = "./logs/L16x16x16x16_dbw2_beta1.25/test_ptmetad"
 logfile = "tau1_phipidiv8_pt.txt"
-measurement_basedir = "./measurements/L16x16x16x16_dbw2_beta1.25"
-measurement_dir = "tau1_phipidiv8_pt"
+measurement_basedir = "./measurements/L16x16x16x16_dbw2_beta1.25/test_ptmetad"
+measurement_dir = "raw_data"
 randomseed = 1206
 verboselevel = 1
-bias_basedir = "./metapotentials/L16x16x16x16_dbw2_beta1.25"
-bias_dir = "tau1_phipidiv8_pt"
+bias_basedir = "./metapotentials/L16x16x16x16_dbw2_beta1.25/test_ptmetad"
+bias_dir = "bias"
 overwrite = true
 
 ["Measurement set".measurement_methods.Plaquette]
-measure_every = 10
+measure_every = 1
 methodname = "plaquette"
 
 [gradientflow_measurements]
