Adjust templates to fit improved parsing

--- a/templates/parameters_metad.toml
+++ b/templates/parameters_metad.toml
@@ -21,7 +21,7 @@ biasfactor = "Inf"
 # metadynamics specific parameters
 bin_width = 0.02
 meta_weight = 0.01
-penalty_weight = 1000
+penalty_weight = 100
 # usebiases = [
 #     "./metapotentials/L16x16x16x16_dbw2_beta1.25/dummy.txt",
 # ]
@@ -43,18 +43,41 @@ bias_basedir = "./metapotentials/L12x12x12x12_wilson_beta6.0/test_metad"
 bias_dir = "bias"
 overwrite = true
 
-["Measurement set".measurement_methods.Plaquette]
-measure_every = 10
-methodname = "plaquette"
+["Measurement Settings".measurements.Energy_density]
+measure_every = 1
+kinds_of_energy_density = ["plaquette", "clover", "improved"]
 
-[gradientflow_measurements]
+["Measurement Settings".measurements.Gauge_action]
+measure_every = 1
+kinds_of_gauge_action = ["wilson", "symanzik_tree", "iwasaki", "dbw2"]
+
+["Measurement Settings".measurements.Plaquette]
+measure_every = 1
+
+["Measurement Settings".measurements.Polyakov_loop]
+measure_every = 1
+
+["Measurement Settings".measurements.Topological_charge]
+measure_every = 1
+kinds_of_topological_charge = ["plaquette", "clover", "improved"]
+
+["Measurement Settings".measurements.Wilson_loop]
+measure_every = 1
+Rmax = 4
+Tmax = 4
+
+["Gradient Flow Settings"]
 flow_integrator = "euler"
 flow_num = 7
 flow_steps = 1
-flow_tf = 0.12
+flow_tf = 0.12 # total flow time is flow_num * flow_tf
 flow_measure_every = 7
 
-    [gradientflow_measurements.measurements_with_flow.Topological_charge]
+    ["Gradient Flow Settings".measurements_with_flow.Topological_charge]
     measure_every = 10
     kinds_of_topological_charge = ["clover"]
-    methodname = "topological_charge"
+
+    ["Gradient Flow Settings".measurements_with_flow.Wilson_loop]
+    measure_every = 10
+    Rmax = 2
+    Tmax = 2
