--- a/templates/parameters_build.toml
+++ b/templates/parameters_build.toml
@@ -1,9 +1,9 @@
 ["Physical Settings"]
-L = [12, 12, 12, 12]
-beta = 6.0
-kind_of_gaction = "wilson"
-numtherm = 20
-numsteps = 100
+L = [16, 16, 16, 16]
+beta = 1.25
+kind_of_gaction = "dbw2"
+numtherm = 10
+numsteps = 1
 initial = "cold"
 update_method = "HMC"
 
@@ -16,7 +16,7 @@ rhostout_for_cv = 0.12
 is_static = false
 symmetric = true
 stride = 1
-cvlims = [-6, 6]
+cvlims = [-5, 5]
 biasfactor = "Inf"
 # metadynamics specific parameters
 bin_width = 0.01
@@ -32,28 +32,30 @@ hmc_steps = 5
 hmc_integrator = "OMF4"
 
 ["System Settings"]               
-logdir = "./logs/L12x12x12x12_wilson_beta6.0/test_build"
+logdir = "./logs/L16x16x16x16_dbw2_beta1.25/test_build"
 logfile = "logs.txt"
-measurement_basedir = "./measurements/L12x12x12x12_wilson_beta6.0/test_build"
+measurement_basedir = "./measurements/L16x16x16x16_dbw2_beta1.25/test_build"
 measurement_dir = "raw_data"
 randomseed = 123
 verboselevel = 1
-bias_basedir = "./metapotentials/L12x12x12x12_wilson_beta6.0/test_build"
+bias_basedir = "./metapotentials/L16x16x16x16_dbw2_beta1.25/test_build"
 bias_dir = "bias"
 overwrite = true
 
-["Measurement set".measurement_methods.Plaquette]
-measure_every = 10
-methodname = "plaquette"
+["Measurement Settings".measurements.Plaquette]
+measure_every = 1
 
-[gradientflow_measurements]
+["Measurement Settings".measurements.Topological_charge]
+measure_every = 1
+kinds_of_topological_charge = ["clover"]
+
+["Gradient Flow Settings"]
 flow_integrator = "euler"
-flow_num = 7
+flow_num = 30
 flow_steps = 1
-flow_tf = 0.12
-flow_measure_every = 7
+flow_tf = 0.12 # total flow time is flow_num * flow_tf
+flow_measure_every = 30
 
-    [gradientflow_measurements.measurements_with_flow.Topological_charge]
+    ["Gradient Flow Settings".measurements_with_flow.Topological_charge]
     measure_every = 10
     kinds_of_topological_charge = ["clover"]
-    methodname = "topological_charge"
