--- a/templates/parameters_heatbath.toml
+++ b/templates/parameters_heatbath.toml
@@ -2,14 +2,14 @@
 L = [12, 12, 12, 12]
 beta = 6.0
 kind_of_gaction = "wilson"
-numtherm = 50
-numsteps = 100
+numtherm = 20
+numsteps = 10
 initial = "cold"
 update_method = "heatbath"
 hb_maxit = 10
 numheatbath = 1
 eo = true
-or_algorithm = "subgroups"
+or_algorithm = "kenney-laub"
 numorelax = 4
 parity_update = true
 
@@ -22,28 +22,42 @@ randomseed = 123
 verboselevel = 1
 overwrite = true
 
-["Measurement set".measurement_methods.Polyakov_loop]
-measure_every = 10
-methodname = "polyakov_loop"
+["Measurement Settings".measurements.Energy_density]
+measure_every = 1
+kinds_of_energy_density = ["plaquette", "clover", "improved"]
 
-["Measurement set".measurement_methods.Topological_charge]
-measure_every = 10
-kinds_of_topological_charge = ["clover"]
-methodname = "topological_charge"
+["Measurement Settings".measurements.Gauge_action]
+measure_every = 1
+kinds_of_gauge_action = ["wilson", "symanzik_tree", "iwasaki", "dbw2"]
 
-["Measurement set".measurement_methods.Plaquette]
-measure_every = 10
-methodname = "plaquette"
+["Measurement Settings".measurements.Plaquette]
+measure_every = 1
 
-[gradientflow_measurements]
+["Measurement Settings".measurements.Polyakov_loop]
+measure_every = 1
+
+["Measurement Settings".measurements.Topological_charge]
+measure_every = 1
+kinds_of_topological_charge = ["plaquette", "clover", "improved"]
+
+["Measurement Settings".measurements.Wilson_loop]
+measure_every = 1
+Rmax = 4
+Tmax = 4
+
+["Gradient Flow Settings"]
 flow_integrator = "euler"
 flow_num = 7
 flow_steps = 1
 flow_tf = 0.12 # total flow time is flow_num * flow_tf
 flow_measure_every = 7
 
-    [gradientflow_measurements.measurements_with_flow.Topological_charge]
+    ["Gradient Flow Settings".measurements_with_flow.Topological_charge]
     measure_every = 10
     kinds_of_topological_charge = ["clover"]
-    methodname = "topological_charge"
+
+    ["Gradient Flow Settings".measurements_with_flow.Wilson_loop]
+    measure_every = 10
+    Rmax = 2
+    Tmax = 2
 
